syntax = "proto3";
package terra.gov.v2custom;

import "terra/gov/v2custom/gov.proto";
import "cosmos/gov/v1/gov.proto";

option go_package = "github.com/classic-terra/core/v3/custom/gov/types/v2custom";

// GenesisState defines the gov module's genesis state.
message GenesisState {
  // starting_proposal_id is the ID of the starting proposal.
  uint64 starting_proposal_id = 1;
  // deposits defines all the deposits present at genesis.
  repeated cosmos.gov.v1.Deposit deposits = 2;
  // votes defines all the votes present at genesis.
  repeated cosmos.gov.v1.Vote votes = 3;
  // proposals defines all the proposals present at genesis.
  repeated cosmos.gov.v1.Proposal proposals = 4;
  // Deprecated: Prefer to use `params` instead.
  // deposit_params defines all the paramaters of related to deposit.
  cosmos.gov.v1.DepositParams deposit_params = 5 [deprecated = true];
  // Deprecated: Prefer to use `params` instead.
  // voting_params defines all the paramaters of related to voting.
  cosmos.gov.v1.VotingParams voting_params = 6 [deprecated = true];
  // Deprecated: Prefer to use `params` instead.
  // tally_params defines all the paramaters of related to tally.
  cosmos.gov.v1.TallyParams tally_params = 7 [deprecated = true];
  // params defines all the paramaters of x/gov module.
  //
  // Since: cosmos-sdk 0.47
  terra.gov.v2custom.Params params = 8;
}
